# cudaeeg

./: CMakeLists.txt  README.md  data_loader.py  pipeline.cu
benchmarks/: bench.py  nsight_profile.sh  occupancy.cu
data/: README.md
include/: cuda_eeg_prep.h
kernels/: bandpass.cu  car.cu  kernels.h  notch.cu  psd.cu
python/: bindings.cpp
taps/: fir_taps.h  generate_taps.py
tests/: test_filters.py
visualizer/: plot.py  power.py  runner.py
visualizer/web/: index.html  websocket_server.py
